<resources>
    <!--  sign  -->
    <string name="app_name">danii_side</string>
    <string name="sign_in_title">Welcome to daninii</string>
    <string name="sign_id_label">ID</string>
    <string name="sign_id_hint">아이디를 입력하세요.</string>
    <string name="sign_pw_label">Password</string>
    <string name="sign_pw_hint">비밀번호를 입력하세요.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_mbti_label">MBTI</string>
    <string name="sign_mbti_hint">MBTI를 입력하세요.</string>

    <!--  github  -->
    <string name="repo_item_title">Android Study</string>
    <string name="repo_item_author">dani43</string>
    <string name="github_header_label">♥ 다니의 레포지토리 ♥</string>

    <!--  gallery  -->
    <string name="gallery_title">❤ MY FAVORITES ❤</string>
    <string name="favorite1_title">마이멜로디</string>
    <string name="favorite2_title">귀여운 겨우리</string>
    <string name="favorite3_title">실바니안</string>
</resources>